/*
 * $Id: ChangeLog,v 1.1957 2003/12/29 18:29:45 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-12-29  11:16 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
  * source/rtl/seconds.c
    * Added HB_EXPORT to hb_secondsCPU()

  * source/rtl/gtwin/gtwin.c
    * MSVC compilation

2003-12-29 16:30 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
  * utils/hbdoc/genng.prg
    utils/hbdoc/genrtf.prg
     ! REPL() calls changes to replicate()

2003-12-29 11:00 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
  * source/rtl/hbffind.c
   ! added error 25 to winToDosError

2003-12-29 10:40 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
  * xharbour/source/rtl/filesys.c
   ! Fix to hb_fsWrite and hb_fsWriteLarge on Win32 api section, when number of bytes to write is 0

2003-12-29 11:41 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/contrib/libct/strfile.prg
   * fixed strfile() - we still haven't SETSHARE()/GETSHARE()/SETFCREATE()
     when they will be implemented this function has to be updated

  * xharbour/source/rtl/filesys.c
   * added errorcodes conversion for OpenWatcom.
     full conversion table for all compilers is on my TODO list
     but with low priority

  * xharbour/source/rtl/gtpca/gtpca.c
   ! small fix for OpenWatcom

2003-12-29 14:26 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/gtwvt/gtwvt.c
   + added K_LDBLCLK & K_RDBLCLK support
   + Turn off K_MOUSEMOVE handling by default ( see hbgtwvt.h )
  * include/hbgtwvt.h
   + added extern BOOL HB_EXPORT hb_wvt_gtSetMouseMove( BOOL bHandleEvent)
   *     - allows mouse movement events to be handled

2003-12-29 02:25 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  + doc/en/bkgtsks.txt
  * doc/en/set.txt
    + Added background tasks documentation.
